# LuaXEAudio

./: CMakeLists.txt  README.md  SoLoudLuaBind.h  dll.def  main.cpp
soloud/: soloud_speech.h
soloud/core/: soloud.cpp
